--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "express-validator": "^7.2.1",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.15.0"
   }
 }
